src/objects/Apttus__Agreement_Clause__c/Apttus__Agreement_Clause__c.object-meta.xml
<CustomObject>
    <description>Represents a clause associated with an agreement</description>
    <label>Agreement Clause</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Clauses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>