src/objects/Apttus__Agreement_Clause__c/fields/Apttus__DiffText2__c.field-meta.xml
<CustomField>
    <fullName>Apttus__DiffText2__c</fullName>
    <description>The clause diff text</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The clause diff text</inlineHelpText>
    <label>Diff Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>