src/objects/Apttus__Agreement_Clause__c/fields/CLM_Inserted_Lookup__c.field-meta.xml
<CustomField>
    <fullName>CLM_Inserted_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inserted Lookup</label>
    <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
    <relationshipLabel>Agreement Clauses</relationshipLabel>
    <relationshipName>InsertedClauses</relationshipName>
    <type>Lookup</type>
</CustomField>