src/objects/Apttus__Agreement_Clause__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Apttus__Agreement__c</columns>
    <columns>Apttus__Clause__c</columns>
    <columns>Apttus__Action__c</columns>
    <columns>Apttus__Status__c</columns>
    <columns>Apttus__Category__c</columns>
    <columns>Apttus__Subcategory__c</columns>
    <columns>CLM_Inserted_Lookup__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>